--- a/layouts/index.html
+++ b/layouts/index.html
@@ -283,7 +283,7 @@
     <section>
         <h2 class="text-4xl font-bold mb-5">Experience</h2>
         <div class="space-y-8 max-w-5xl mx-auto">
-            {{ range $index, $exp := .Site.Params.experience }}
+            {{ range $index, $exp := first 3 .Site.Params.experience }}
             <div class="relative pl-8 before:content-[''] before:absolute before:left-0 before:top-0 before:w-[2px] before:h-full before:bg-gray-700 before:rounded-full">
                 {{ if eq .company "Open Source Contributor" }}
                 <div class="absolute -left-1.5 top-0 w-3 h-3 bg-[#121212] border border-blue-400 rounded-full"></div>
@@ -296,6 +296,9 @@
                 <p class="mt-2">{{ .description }}</p>
             </div>
             {{ end }}
+        </div>
+        <div class="flex justify-center mt-8">
+            <a href="/experience" class="text-blue-500 hover:text-blue-400 transition-colors duration-200 text-lg">View All</a>
         </div>
     </section>
 
