--- a/layouts/_default/blogs.html
+++ b/layouts/_default/blogs.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-<div class="w-full md:w-3/4 lg:w-1/2 mx-auto px-4 py-12">
+<div class="w-full md:w-11/12 lg:w-5/6 xl:w-4/5 max-w-6xl mx-auto px-4 py-12">
     <h1 class="text-5xl font-bold mb-12">{{ .Title }}</h1>
     
-    <div class="space-y-12 max-w-3xl mx-auto">
+    <div class="space-y-12 max-w-5xl mx-auto">
         <h2 class="text-3xl font-bold mb-6">All Articles</h2>
         
         {{ $regularPosts := slice }}
