--- a/layouts/_default/experience.html
+++ b/layouts/_default/experience.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="max-w-4xl mx-auto px-4 py-12">
+<div class="w-full md:w-11/12 lg:w-5/6 xl:w-4/5 max-w-6xl mx-auto px-4 py-12">
     <h1 class="text-5xl font-bold mb-3 text-gray-100">{{ .Title }}</h1>
     <div class="mb-12 bg-[#121212] p-8 rounded-lg">
         <div class="intro-section">
