--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-<div class="w-full px-4 md:w-11/12 lg:w-3/4 xl:w-1/2 mx-auto py-12">
-    <div class="max-w-3xl mx-auto p-4 md:p-8 border border-gray-800 rounded-2xl bg-[#121212]">
+<div class="w-full px-4 md:w-11/12 lg:w-5/6 xl:w-4/5 max-w-6xl mx-auto py-12">
+    <div class="max-w-5xl mx-auto p-4 md:p-8 border border-gray-800 rounded-2xl bg-[#121212]">
         <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-4">{{ .Title }}</h1>
         {{ if eq .Section "blogs" }}
             <div class="flex flex-col sm:flex-row sm:items-center gap-2 sm:gap-4 mb-8 text-gray-400 text-sm md:text-base">
