--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 <footer class="mt-32 text-center">
-    <div class="max-w-3xl mx-auto">
+    <div class="w-full md:w-4/5 lg:w-3/4 xl:w-2/3 max-w-5xl mx-auto">
         <div class="border-t border-gray-800 pt-5">
             <div class="flex flex-col items-center justify-center gap-2">                
                 <p class="text-gray-500 text-xm ">© {{ now.Format "2006" }} {{ .Site.Params.name }}</p>
