--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <header class="py-6 relative">
-    <div class="max-w-6xl mx-auto px-4">
+    <div class="w-full md:w-4/5 lg:w-4/5 xl:w-3/4 2xl:w-2/3 max-w-7xl mx-auto px-4">
         <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4">
             <div class="flex justify-between items-center">
                 <a href="{{ .Site.BaseURL }}" class="text-xl font-bold text-white hover:text-gray-300 transition-colors duration-300">
